add static method decorators

--- a/cars.ipynb
+++ b/cars.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 348,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,8 +19,9 @@
     "        \n",
     "    @staticmethod\n",
     "    def is_valid(string):\n",
-    "        return string in Token.__token_list.keys() and Token[string]['k']\n",
+    "        return string in Token.__token_list.keys() and Token.__token_list[string]['kind'] != 'identifier'\n",
     "    \n",
+    "    @staticmethod\n",
     "    def get_token_details(string):\n",
     "        if(Token.is_valid(string)):\n",
     "            return Token.__token_list[string]\n",
@@ -35,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 349,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 350,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 351,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 352,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 353,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 354,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,58 +93,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 355,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "int\n",
-      "float\n",
-      "boolean\n",
-      "string\n",
-      "while\n",
-      "until\n",
-      "if\n",
-      "else\n",
-      "true\n",
-      "false\n",
-      "+\n",
-      "-\n",
-      "*\n",
-      "/\n",
-      "%\n",
-      ":=\n",
-      "==\n",
-      ">\n",
-      "<\n",
-      ">=\n",
-      "<=\n",
-      "!=\n",
-      "&&\n",
-      "||\n",
-      "!\n",
-      "?\n",
-      ":\n",
-      "{\n",
-      "}\n",
-      "(\n",
-      ")\n",
-      "[\n",
-      "]\n",
-      ",\n",
-      ";\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "Token.print_all_tokens()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 356,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,25 +119,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 357,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "\n",
-      "int fact( int n) {\n",
-      "if (n <= 1)\n",
-      "return 1;\n",
-      "else\n",
-      "return n*fact(n-1);\n",
-      "}\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(input)"
    ]
@@ -192,47 +135,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 358,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "string int   Token Details : {'kind': 'keyword', 'string': 'int', 'number': 1}  Line number 3\n",
-      "string fact   Token Details : {'kind': 'identifier', 'string': 'fact', 'number': 36}  Line number 3\n",
-      "string (   Token Details : {'kind': 'delimiter', 'string': '(', 'number': 30}  Line number 3\n",
-      "string int   Token Details : {'kind': 'keyword', 'string': 'int', 'number': 1}  Line number 3\n",
-      "string n   Token Details : {'kind': 'identifier', 'string': 'n', 'number': 37}  Line number 3\n",
-      "string )   Token Details : {'kind': 'delimiter', 'string': ')', 'number': 31}  Line number 3\n",
-      "string {   Token Details : {'kind': 'delimiter', 'string': '{', 'number': 28}  Line number 3\n",
-      "string if   Token Details : {'kind': 'keyword', 'string': 'if', 'number': 7}  Line number 4\n",
-      "string (   Token Details : {'kind': 'delimiter', 'string': '(', 'number': 30}  Line number 4\n",
-      "string n   Token Details : {'kind': 'identifier', 'string': 'n', 'number': 37}  Line number 4\n",
-      "string <   Token Details : {'kind': 'operator', 'string': '<', 'number': 19}  Line number 4\n",
-      "string =   Token Details : {'kind': 'identifier', 'string': '=', 'number': 38}  Line number 4\n",
-      "string 1   Token Details : {'kind': 'identifier', 'string': '1', 'number': 39}  Line number 4\n",
-      "string )   Token Details : {'kind': 'delimiter', 'string': ')', 'number': 31}  Line number 4\n",
-      "string retur   Token Details : {'kind': 'identifier', 'string': 'retur', 'number': 40}  Line number 5\n",
-      "string n   Token Details : {'kind': 'identifier', 'string': 'n', 'number': 37}  Line number 5\n",
-      "string 1   Token Details : {'kind': 'identifier', 'string': '1', 'number': 39}  Line number 5\n",
-      "string ;   Token Details : {'kind': 'delimiter', 'string': ';', 'number': 35}  Line number 5\n",
-      "string else   Token Details : {'kind': 'keyword', 'string': 'else', 'number': 8}  Line number 6\n",
-      "string retur   Token Details : {'kind': 'identifier', 'string': 'retur', 'number': 40}  Line number 7\n",
-      "string n   Token Details : {'kind': 'identifier', 'string': 'n', 'number': 37}  Line number 7\n",
-      "string n   Token Details : {'kind': 'identifier', 'string': 'n', 'number': 37}  Line number 7\n",
-      "string *   Token Details : {'kind': 'operator', 'string': '*', 'number': 13}  Line number 7\n",
-      "string fact   Token Details : {'kind': 'identifier', 'string': 'fact', 'number': 36}  Line number 7\n",
-      "string (   Token Details : {'kind': 'delimiter', 'string': '(', 'number': 30}  Line number 7\n",
-      "string n   Token Details : {'kind': 'identifier', 'string': 'n', 'number': 37}  Line number 7\n",
-      "string -   Token Details : {'kind': 'operator', 'string': '-', 'number': 12}  Line number 7\n",
-      "string 1   Token Details : {'kind': 'identifier', 'string': '1', 'number': 39}  Line number 7\n",
-      "string )   Token Details : {'kind': 'delimiter', 'string': ')', 'number': 31}  Line number 7\n",
-      "string ;   Token Details : {'kind': 'delimiter', 'string': ';', 'number': 35}  Line number 7\n",
-      "string }   Token Details : {'kind': 'delimiter', 'string': '}', 'number': 29}  Line number 8\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "ch = ''\n",
     "line_number = 0\n",
@@ -259,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 290,
+   "execution_count": 381,
    "metadata": {},
    "outputs": [
     {
@@ -268,7 +173,7 @@
        "True"
       ]
      },
-     "execution_count": 290,
+     "execution_count": 381,
      "metadata": {},
      "output_type": "execute_result"
     }
