--- a/cars.ipynb
+++ b/cars.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,16 +93,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "int\n",
+      "float\n",
+      "boolean\n",
+      "string\n",
+      "while\n",
+      "until\n",
+      "if\n",
+      "else\n",
+      "true\n",
+      "false\n",
+      "+\n",
+      "-\n",
+      "*\n",
+      "/\n",
+      "%\n",
+      ":=\n",
+      "==\n",
+      ">\n",
+      "<\n",
+      ">=\n",
+      "<=\n",
+      "!=\n",
+      "&&\n",
+      "||\n",
+      "!\n",
+      "?\n",
+      ":\n",
+      "{\n",
+      "}\n",
+      "(\n",
+      ")\n",
+      "[\n",
+      "]\n",
+      ",\n",
+      ";\n"
+     ]
+    }
+   ],
    "source": [
     "Token.print_all_tokens()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,9 +161,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "int fact( int n) {\n",
+      "if (n <= 1)\n",
+      "return 1;\n",
+      "else\n",
+      "return n*fact(n-1);\n",
+      "}\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "print(input)"
    ]
@@ -135,9 +193,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "string int   Token Details : {'kind': 'keyword', 'string': 'int', 'number': 1}  Line number 3\n",
+      "string fact   Token Details : {'kind': 'identifier', 'string': 'fact', 'number': 36}  Line number 3\n",
+      "string (   Token Details : {'kind': 'delimiter', 'string': '(', 'number': 30}  Line number 3\n",
+      "string int   Token Details : {'kind': 'keyword', 'string': 'int', 'number': 1}  Line number 3\n",
+      "string n   Token Details : {'kind': 'identifier', 'string': 'n', 'number': 37}  Line number 3\n",
+      "string )   Token Details : {'kind': 'delimiter', 'string': ')', 'number': 31}  Line number 3\n",
+      "string {   Token Details : {'kind': 'delimiter', 'string': '{', 'number': 28}  Line number 3\n",
+      "string if   Token Details : {'kind': 'keyword', 'string': 'if', 'number': 7}  Line number 4\n",
+      "string (   Token Details : {'kind': 'delimiter', 'string': '(', 'number': 30}  Line number 4\n",
+      "string n   Token Details : {'kind': 'identifier', 'string': 'n', 'number': 38}  Line number 4\n",
+      "string <   Token Details : {'kind': 'operator', 'string': '<', 'number': 19}  Line number 4\n",
+      "string =   Token Details : {'kind': 'identifier', 'string': '=', 'number': 39}  Line number 4\n",
+      "string 1   Token Details : {'kind': 'identifier', 'string': '1', 'number': 40}  Line number 4\n",
+      "string )   Token Details : {'kind': 'delimiter', 'string': ')', 'number': 31}  Line number 4\n",
+      "string return   Token Details : {'kind': 'identifier', 'string': 'return', 'number': 41}  Line number 5\n",
+      "string 1   Token Details : {'kind': 'identifier', 'string': '1', 'number': 42}  Line number 5\n",
+      "string ;   Token Details : {'kind': 'delimiter', 'string': ';', 'number': 35}  Line number 5\n",
+      "string else   Token Details : {'kind': 'keyword', 'string': 'else', 'number': 8}  Line number 6\n",
+      "string return   Token Details : {'kind': 'identifier', 'string': 'return', 'number': 43}  Line number 7\n",
+      "string n   Token Details : {'kind': 'identifier', 'string': 'n', 'number': 44}  Line number 7\n",
+      "string *   Token Details : {'kind': 'operator', 'string': '*', 'number': 13}  Line number 7\n",
+      "string fact   Token Details : {'kind': 'identifier', 'string': 'fact', 'number': 45}  Line number 7\n",
+      "string (   Token Details : {'kind': 'delimiter', 'string': '(', 'number': 30}  Line number 7\n",
+      "string n   Token Details : {'kind': 'identifier', 'string': 'n', 'number': 46}  Line number 7\n",
+      "string -   Token Details : {'kind': 'operator', 'string': '-', 'number': 12}  Line number 7\n",
+      "string 1   Token Details : {'kind': 'identifier', 'string': '1', 'number': 47}  Line number 7\n",
+      "string )   Token Details : {'kind': 'delimiter', 'string': ')', 'number': 31}  Line number 7\n",
+      "string ;   Token Details : {'kind': 'delimiter', 'string': ';', 'number': 35}  Line number 7\n",
+      "string }   Token Details : {'kind': 'delimiter', 'string': '}', 'number': 29}  Line number 8\n"
+     ]
+    }
+   ],
    "source": [
     "ch = ''\n",
     "line_number = 0\n",
@@ -164,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 381,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +267,7 @@
        "True"
       ]
      },
-     "execution_count": 381,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -184,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 293,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
