Changes for raising error in Token constructor

--- a/cars.ipynb
+++ b/cars.ipynb
@@ -21,21 +21,10 @@
     },
     "colab": {
       "name": "cars.ipynb",
-      "provenance": [],
-      "include_colab_link": true
+      "provenance": []
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/Radhesh-Sarma/Compiler-CARS/blob/main/cars.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "markdown",
       "metadata": {
@@ -65,6 +54,8 @@
         "    __counter = 1\n",
         "    __token_types = ['keyword','operator','delimiter','identifier','integer literal','floating point literal','identifier']\n",
         "    def __init__(self,kind,string):\n",
+        "        if kind not in Token.__token_types:\n",
+        "          raise ValueError\n",
         "        self.kind = kind\n",
         "        self.string = string\n",
         "        self.number = self.__counter\n",
@@ -87,7 +78,7 @@
         "        for token in Token.__token_list:\n",
         "            print(token)"
       ],
-      "execution_count": 1,
+      "execution_count": 37,
       "outputs": []
     },
     {
@@ -107,7 +98,7 @@
       "source": [
         "keywords = ['int','float','boolean','string','while','until','if','else','true','false']"
       ],
-      "execution_count": 2,
+      "execution_count": 38,
       "outputs": []
     },
     {
@@ -119,7 +110,7 @@
         "for keyword in keywords:\n",
         "    Token('keyword',keyword)"
       ],
-      "execution_count": 3,
+      "execution_count": 39,
       "outputs": []
     },
     {
@@ -130,7 +121,7 @@
       "source": [
         "operators = ['+','-','*','/','%',':=','==','>','<','>=','<=','!=','&&','||','!','?',':']\n"
       ],
-      "execution_count": 4,
+      "execution_count": 40,
       "outputs": []
     },
     {
@@ -142,7 +133,7 @@
         "for operator in operators:\n",
         "    Token('operator',operator)"
       ],
-      "execution_count": 5,
+      "execution_count": 41,
       "outputs": []
     },
     {
@@ -153,7 +144,7 @@
       "source": [
         "delimiters = ['{','}','(',')','[',']',',',';']"
       ],
-      "execution_count": 6,
+      "execution_count": 42,
       "outputs": []
     },
     {
@@ -165,7 +156,7 @@
         "for delimiter in delimiters:\n",
         "    Token('delimiter',delimiter)"
       ],
-      "execution_count": 7,
+      "execution_count": 43,
       "outputs": []
     },
     {
@@ -180,16 +171,16 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "j8o52LrxMXbj",
-        "outputId": "30620ca3-afdb-4e1d-bd82-be083560c07c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "j8o52LrxMXbj",
+        "outputId": "e31dad4a-2f23-4201-a4c4-04597ebd0245"
       },
       "source": [
         "Token.print_all_tokens()\n"
       ],
-      "execution_count": 8,
+      "execution_count": 44,
       "outputs": [
         {
           "output_type": "stream",
@@ -250,22 +241,22 @@
         "}\n",
         "\"\"\""
       ],
-      "execution_count": 9,
+      "execution_count": 45,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "rAr0DsNTMXbl",
-        "outputId": "dab0462f-2fda-4267-c725-d932c41002e0",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "rAr0DsNTMXbl",
+        "outputId": "27ca7f47-7bb3-4331-c532-243c3969f0a3"
       },
       "source": [
         "print(input)"
       ],
-      "execution_count": 10,
+      "execution_count": 46,
       "outputs": [
         {
           "output_type": "stream",
@@ -296,11 +287,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "OLdiyO66MXbl",
-        "outputId": "71b894c9-2a36-4913-ecd5-fc1bb80fdf58",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "OLdiyO66MXbl",
+        "outputId": "5c6c72f7-0037-4d17-9964-7a0fe53118d6"
       },
       "source": [
         "ch = ''\n",
@@ -325,37 +316,37 @@
         "                ch = ''\n",
         "#         print(i,ch)        "
       ],
-      "execution_count": 15,
+      "execution_count": 47,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "string int   Token Details : {'kind': 'keyword', 'string': 'int', 'number': 1}  Line number 3\n",
-            "string fact   Token Details : {'kind': 'identifier', 'string': 'fact', 'number': 60}  Line number 3\n",
+            "string fact   Token Details : {'kind': 'identifier', 'string': 'fact', 'number': 36}  Line number 3\n",
             "string (   Token Details : {'kind': 'delimiter', 'string': '(', 'number': 30}  Line number 3\n",
             "string int   Token Details : {'kind': 'keyword', 'string': 'int', 'number': 1}  Line number 3\n",
-            "string n   Token Details : {'kind': 'identifier', 'string': 'n', 'number': 61}  Line number 3\n",
+            "string n   Token Details : {'kind': 'identifier', 'string': 'n', 'number': 37}  Line number 3\n",
             "string )   Token Details : {'kind': 'delimiter', 'string': ')', 'number': 31}  Line number 3\n",
             "string {   Token Details : {'kind': 'delimiter', 'string': '{', 'number': 28}  Line number 3\n",
             "string if   Token Details : {'kind': 'keyword', 'string': 'if', 'number': 7}  Line number 4\n",
             "string (   Token Details : {'kind': 'delimiter', 'string': '(', 'number': 30}  Line number 4\n",
-            "string n   Token Details : {'kind': 'identifier', 'string': 'n', 'number': 62}  Line number 4\n",
+            "string n   Token Details : {'kind': 'identifier', 'string': 'n', 'number': 38}  Line number 4\n",
             "string <   Token Details : {'kind': 'operator', 'string': '<', 'number': 19}  Line number 4\n",
-            "string =   Token Details : {'kind': 'identifier', 'string': '=', 'number': 63}  Line number 4\n",
-            "string 1   Token Details : {'kind': 'identifier', 'string': '1', 'number': 64}  Line number 4\n",
+            "string =   Token Details : {'kind': 'identifier', 'string': '=', 'number': 39}  Line number 4\n",
+            "string 1   Token Details : {'kind': 'identifier', 'string': '1', 'number': 40}  Line number 4\n",
             "string )   Token Details : {'kind': 'delimiter', 'string': ')', 'number': 31}  Line number 4\n",
-            "string return   Token Details : {'kind': 'identifier', 'string': 'return', 'number': 65}  Line number 5\n",
-            "string 1   Token Details : {'kind': 'identifier', 'string': '1', 'number': 66}  Line number 5\n",
+            "string return   Token Details : {'kind': 'identifier', 'string': 'return', 'number': 41}  Line number 5\n",
+            "string 1   Token Details : {'kind': 'identifier', 'string': '1', 'number': 42}  Line number 5\n",
             "string ;   Token Details : {'kind': 'delimiter', 'string': ';', 'number': 35}  Line number 5\n",
             "string else   Token Details : {'kind': 'keyword', 'string': 'else', 'number': 8}  Line number 6\n",
-            "string return   Token Details : {'kind': 'identifier', 'string': 'return', 'number': 67}  Line number 7\n",
-            "string n   Token Details : {'kind': 'identifier', 'string': 'n', 'number': 68}  Line number 7\n",
+            "string return   Token Details : {'kind': 'identifier', 'string': 'return', 'number': 43}  Line number 7\n",
+            "string n   Token Details : {'kind': 'identifier', 'string': 'n', 'number': 44}  Line number 7\n",
             "string *   Token Details : {'kind': 'operator', 'string': '*', 'number': 13}  Line number 7\n",
-            "string fact   Token Details : {'kind': 'identifier', 'string': 'fact', 'number': 69}  Line number 7\n",
+            "string fact   Token Details : {'kind': 'identifier', 'string': 'fact', 'number': 45}  Line number 7\n",
             "string (   Token Details : {'kind': 'delimiter', 'string': '(', 'number': 30}  Line number 7\n",
-            "string n   Token Details : {'kind': 'identifier', 'string': 'n', 'number': 70}  Line number 7\n",
+            "string n   Token Details : {'kind': 'identifier', 'string': 'n', 'number': 46}  Line number 7\n",
             "string -   Token Details : {'kind': 'operator', 'string': '-', 'number': 12}  Line number 7\n",
-            "string 1   Token Details : {'kind': 'identifier', 'string': '1', 'number': 71}  Line number 7\n",
+            "string 1   Token Details : {'kind': 'identifier', 'string': '1', 'number': 47}  Line number 7\n",
             "string )   Token Details : {'kind': 'delimiter', 'string': ')', 'number': 31}  Line number 7\n",
             "string ;   Token Details : {'kind': 'delimiter', 'string': ';', 'number': 35}  Line number 7\n",
             "string }   Token Details : {'kind': 'delimiter', 'string': '}', 'number': 29}  Line number 8\n"
